fix/fixbug-UI-1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </li>
         </ul>
         <p>Vina Technology delivers precision and innovation for diverse industry needs.</p>
-        <a href="#" class="learn-more">LEARN MORE &rarr;</a>
+        <a href="/resources/pages/about/index.html" class="learn-more">LEARN MORE &rarr;</a>
       </div>
     </div>
   </section>
