--- a/resources/pages/product-service/optical-cutting/index.html
+++ b/resources/pages/product-service/optical-cutting/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="wrapper">
-    <header id="header-homepage"></header>
+    <header id="header-homepage" class="custom-header-optical-cutting"></header>
 
     <main>
       <section class="container-optical-cutting">
