--- a/resources/pages/product-service/outsourcing-services/index.html
+++ b/resources/pages/product-service/outsourcing-services/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="wrapper">
-    <header id="header-homepage"></header>
+    <header id="header-homepage" class="custom-header-outsourcing-services"></header>
 
     <main>
       <!-- Outsourcing Services -->
@@ -46,10 +46,12 @@
             <div>
               <h2>Seek Die-cutting performance:</h2>
               <ul>
-                <li><i class="fas fa-check"></i>High speed running</li>
-                <li><i class="fas fa-check"></i>Rapid response 24hours</li>
-                <li><i class="fas fa-check"></i>Complex products with high accuracy</li>
-                <li><i class="fas fa-check"></i>High quality and can meets the accuracy of automation process</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">High speed running</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">Rapid response 24hours</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">Complex products with high accuracy</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">High quality and can meets the accuracy
+                  of
+                  automation process</li>
               </ul>
             </div>
             <img src="/resources/images/img_seek_die_cutting.svg" alt="seek_die_cutting">
@@ -59,10 +61,12 @@
             <div>
               <h2>Rotary Die-cutting performance:</h2>
               <ul>
-                <li><i class="fas fa-check"></i>High capacity</li>
-                <li><i class="fas fa-check"></i>Building the complex products</li>
-                <li><i class="fas fa-check"></i>Good quality</li>
-                <li><i class="fas fa-check"></i>For joint products with the large size and multi layers</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">High capacity</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">Building the complex products</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">Good quality</li>
+                <li><img src="/resources/images/ic_check.svg" alt="ic_check">For joint products with the large size
+                  and multi
+                  layers</li>
               </ul>
             </div>
             <img src="/resources/images/img_rotary_die_cutting.svg" alt="rotary_die_cutting">
@@ -88,9 +92,11 @@
 
       <!-- Equipment Capacity -->
       <section class="section-equipment-capacity">
-        <h2 class="title-section-equipment-capacity">Equipment Capacity</h2>
-        <div class="container-img img-equipment-capacity">
-          <img src="/resources/images/img_equipment_capacity.svg" alt="img_equipment_capacity">
+        <div class="equipment-capacity">
+          <h2 class="title-section-equipment-capacity">Equipment Capacity</h2>
+          <div class="container-img img-equipment-capacity">
+            <img src="/resources/images/img_equipment_capacity.svg" alt="img_equipment_capacity">
+          </div>
         </div>
       </section>
 
