--- a/resources/pages/contact-us/index.html
+++ b/resources/pages/contact-us/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="wrapper">
-    <header id="header-homepage"></header>
+    <header id="header-homepage" class="custom-header-contact"></header>
 
     <main>
       <section class="contact-us">
