--- a/resources/pages/about/index.html
+++ b/resources/pages/about/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="/vendors/css/fonts.css">
   <link rel="stylesheet" type="text/css" href="/resources/components/styles-css/header-homepage.css">
   <link rel="stylesheet" type="text/css" href="/resources/components/styles-css/footer.css">
+  <script src="https://unpkg.com/i18next/i18next.min.js"></script>
 </head>
 
 <body>
@@ -22,28 +23,30 @@
           <!-- ABOUT SECTION -->
           <section class="about-section">
             <div class="container-about-section">
-              <h1>About Us</h1>
-              <p>Read more about us, our vision, mission,<Br /> organization and many other you might love.</p>
+              <h1 data-i18n="about_us">About Us</h1>
+              <p data-i18n="des_about_us">Read more about us, our vision, mission,<Br /> organization and many other you
+                might love.</p>
             </div>
           </section>
 
           <!-- INFO SECTION -->
           <section class="info-section">
             <div class="info-box">
-              <h4>Date off Inc</h4>
-              <p class="style-elementP">Incorporated in Nov 2018</p>
-              <h4>Address</h4>
-              <p class="style-elementP">Lot 06, Road TS25, Tien Son Industrial Park, Dong Nguyen Ward, Tu Son Town, Bac
+              <h4 data-i18n="date_off_inc">Date off Inc</h4>
+              <p class="style-elementP" data-i18n="date_off_inc_content">Incorporated in Nov 2018</p>
+              <h4 data-i18n="address">Address</h4>
+              <p class="style-elementP" data-i18n="address_content">Lot 06, Road TS25, Tien Son Industrial Park, Dong
+                Nguyen Ward, Tu Son Town, Bac
                 Ninh
                 Province, Vietnam
               </p>
-              <h4>Manpower</h4>
-              <p>The number of employees exceeding 90</p>
+              <h4 data-i18n="manpower">Manpower</h4>
+              <p data-i18n="manpower_content">The number of employees exceeding 90</p>
             </div>
 
             <div class="info-box">
-              <h4>Production field</h4>
-              <p class="style-elementP">
+              <h4 data-i18n="production_field">Production field</h4>
+              <p class="style-elementP" data-i18n="production_field_content">
                 Precision die cutting of heat conduction, insulation and shielding materials; Precision die cutting of
                 graphite
                 copper foil foam heat conduction components; Optical protective film, AB glue, OCA optical glue,
@@ -52,15 +55,15 @@
                 waterproof,
                 shading and other materials of precision die-cutting products.
               </p>
-              <h4>Capacity</h4>
-              <p>200,000,000 sheets/year</p>
+              <h4 data-i18n="capacity">Capacity</h4>
+              <p data-i18n="capacity_content">200,000,000 sheets/year</p>
             </div>
           </section>
 
           <!-- Organization Section -->
           <section class="organization-section">
             <div class="container-organization-section">
-              <h1>ORganization</h1>
+              <h1 data-i18n="organization">Organization</h1>
               <img src="/resources/images/img_organization.svg" alt="img_organization">
             </div>
           </section>
@@ -68,65 +71,72 @@
           <!-- Seven Cores -->
           <div class="container-seven-cores">
             <div class="container-body">
-              <div class="title">SEVEN CORES</div>
+              <div class="title" data-i18n="seven_cores">SEVEN CORES</div>
               <div class="grid upper">
                 <div class="card">
                   <span class="card-number">1</span>
-                  <h3>Cost</h3>
+                  <h3 data-i18n="cost">Cost</h3>
                   <ul>
-                    <li>lSatisfactory supply and demand relationship and reliable and stable supplier resources</li>
-                    <li>lPossess a complete process chain with optimization and continuous improvement of all links</li>
+                    <li data-i18n="cost_content1">lSatisfactory supply and demand relationship and reliable and stable
+                      supplier resources</li>
+                    <li data-i18n="cost_content2">lPossess a complete process chain with optimization and continuous
+                      improvement of all links</li>
                   </ul>
                 </div>
                 <div class="card">
                   <span class="card-number">2</span>
-                  <h3>Manufacturing process</h3>
+                  <h3 data-i18n="manufacturing_process">Manufacturing process</h3>
                   <ul>
-                    <li>l200,000,000Sheet/Year。</li>
-                    <li>lAdvanced production technology and equipment, scheduled production capacity
+                    <li data-i18n="manufacturing_process1">l200,000,000Sheet/Year。</li>
+                    <li data-i18n="manufacturing_process2">lAdvanced production technology and equipment, scheduled
+                      production capacity
                       200,000,000Sheet/Year</li>
                   </ul>
                 </div>
                 <div class="card">
                   <span class="card-number">3</span>
-                  <h3>Value added customer</h3>
+                  <h3 data-i18n="value_added_customer">Value added customer</h3>
                   <ul>
-                    <li>lComprehensive coordination of quality, delivery time, cost, service, flexibility, and design
+                    <li data-i18n="value_added_customer1">lComprehensive coordination of quality, delivery time, cost,
+                      service, flexibility, and design
                     </li>
-                    <li>lPay attention to customers' product upgrades, value enhancements, and service experience</li>
+                    <li data-i18n="value_added_customer2">lPay attention to customers' product upgrades, value
+                      enhancements, and service experience</li>
                   </ul>
                 </div>
               </div>
               <div class="grid lower">
                 <div class="card">
                   <span class="card-number">4</span>
-                  <h3>Technological innovation</h3>
+                  <h3 data-i18n="technological_innovation">Technological innovation</h3>
                   <ul>
-                    <li>lActively develop automated production processes, reduce manual work, reduce costs, and maintain
+                    <li data-i18n="technological_innovation1">lActively develop automated production processes, reduce
+                      manual work, reduce costs, and maintain
                       product consistency</li>
                   </ul>
                 </div>
                 <div class="card">
                   <span class="card-number">5</span>
-                  <h3>Engineering service</h3>
+                  <h3 data-i18n="engineering_service">Engineering service</h3>
                   <ul>
-                    <li>lRespond quickly to customer development needs“2485” Principle customer service commitment goal
+                    <li data-i18n="engineering_service1">lRespond quickly to customer development needs“2485” Principle
+                      customer service commitment goal
                     </li>
                   </ul>
                 </div>
                 <div class="card">
                   <span class="card-number">6</span>
-                  <h3>Flexible delivery</h3>
+                  <h3 data-i18n="flexible_delivery">Flexible delivery</h3>
                   <ul>
-                    <li>l5 days new product sample delivery</li>
-                    <li>lMass production lead time: 5~10 days</li>
+                    <li data-i18n="flexible_delivery1">l5 days new product sample delivery</li>
+                    <li data-i18n="flexible_delivery2">lMass production lead time: 5~10 days</li>
                   </ul>
                 </div>
                 <div class="card">
                   <span class="card-number">7</span>
-                  <h3>Quality assurance</h3>
+                  <h3 data-i18n="quality_assurance">Quality assurance</h3>
                   <ul>
-                    <li>lISO9001， ISO14001，QC080000 Management system promotion .</li>
+                    <li data-i18n="quality_assurance1">lISO9001， ISO14001，QC080000 Management system promotion .</li>
                   </ul>
                 </div>
               </div>
@@ -139,20 +149,20 @@
             <div class="values-container">
               <div class="value-item">
                 <img src="/resources/images/ic_vision.svg" alt="ic_vision">
-                <h3>VISION</h3>
-                <p>Make technology change life</p>
+                <h3 data-i18n="vision">VISION</h3>
+                <p data-i18n="vision_content">Make technology change life</p>
               </div>
               <div class="line"></div>
               <div class="value-item">
                 <img src="/resources/images/ic_mission.svg" alt="ic_mission">
-                <h3>MISSION</h3>
-                <p>Reliable partner in the field of<br /> precision diecutting</p>
+                <h3 data-i18n="mission">MISSION</h3>
+                <p data-i18n="mission_content">Reliable partner in the field of<br /> precision diecutting</p>
               </div>
               <div class="line"></div>
               <div class="value-item">
                 <img src="/resources/images/ic_value.svg" alt="ic_value">
-                <h3>VALUE</h3>
-                <p>Honesty and quality, innovation<br /> and gratitude</p>
+                <h3 data-i18n="value">VALUE</h3>
+                <p data-i18n="value_content">Honesty and quality, innovation<br /> and gratitude</p>
               </div>
             </div>
           </section>
@@ -165,9 +175,9 @@
     </footer>
   </div>
 
-  <script src="script.js"></script>
-  <script src="/resources/js/load-footer.js"></script>
   <script src="/resources/js/load-header-homepage.js"></script>
+  <script src="/resources/js/load-footer.js"></script>
+  <script src="/resources/js/scripts.js"></script>
 
 </body>
 
