--- a/resources/pages/about/index.html
+++ b/resources/pages/about/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" type="text/css" href="/resources/components/styles-css/header-homepage.css">
   <link rel="stylesheet" type="text/css" href="/resources/components/styles-css/footer.css">
   <script src="https://unpkg.com/i18next/i18next.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
 </head>
 
 <body>
@@ -24,7 +26,8 @@
           <section class="about-section">
             <div class="container-about-section">
               <h1 data-i18n="about_us">About Us</h1>
-              <p data-i18n="des_about_us">Read more about us, our vision, mission,<Br /> organization and many other you
+              <p data-i18n="des_about_us" class="des_about_us">Read more about us, our vision, mission,<Br />
+                organization and many other you
                 might love.</p>
             </div>
           </section>
