--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="vendors/css/fonts.css">
   <link rel="stylesheet" type="text/css" href="resources/components/styles-css/header-homepage.css">
   <link rel="stylesheet" type="text/css" href="resources/components/styles-css/footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <script src="https://unpkg.com/i18next/i18next.min.js"></script>
 </head>
 
