--- a/resources/pages/contact-us/index.html
+++ b/resources/pages/contact-us/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="/resources/components/styles-css/header-homepage.css">
   <link rel="stylesheet" type="text/css" href="/resources/components/styles-css/footer.css">
   <script src="https://unpkg.com/i18next/i18next.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 
 <body>
