feat/update-info-web

--- a/index.html
+++ b/index.html
@@ -95,29 +95,32 @@
   <!-- Partners Section -->
   <section id="partners" class="partners-section">
     <div class="partners-logos">
-      <div class="logo_row">
+      <!-- <div class="logo_row">
         <img src="resources/images/logo_henkel.svg" alt="logo_henkel">
         <img src="resources/images/logo_bergquist.svg" alt="logo_bergquist">
         <img src="resources/images/logo_3M.svg" alt="logo_3M">
         <img src="resources/images/logo_tesa.svg" alt="logo_tesa">
+      </div> -->
+      <div class="logo_row">
+        <img src="resources/images/logo_dell.svg" alt="logo_dell">
+        <img src="resources/images/logo_lenovo.svg" alt="logo_lenovo">
+        <img src="resources/images/logo_asus.svg" alt="logo_asus">
+        <img src="resources/images/logo_hp.svg" alt="logo_hp">
+        <img src="resources/images/logo_samsung.svg" alt="logo_samsung">
       </div>
       <div class="logo_row">
-        <img src="resources/images/logo_nitto.svg" alt="logo_henkel">
-        <img src="resources/images/logo_rogers.svg" alt="logo_rogers">
-        <img src="resources/images/logo_saati.svg" alt="logo_saati">
-        <img src="resources/images/logo_sony.svg" alt="logo_sony">
+        <img src="resources/images/logo_compal.svg" alt="logo_compal">
+        <img src="resources/images/logo_pegatron.svg" alt="logo_pegatron.svg">
+        <img src="resources/images/logo_quanta_computer.svg" alt="logo_quanta_computer.svg">
+        <img src="resources/images/logo_fore_shot.svg" alt="logo_fore_shot.svg">
+        <img src="resources/images/logo_wistron.svg" alt="logo_wistron.svg">
+        <img src="resources/images/logo_foxcom.svg" alt="logo_foxcom.svg">
       </div>
-      <div class="logo_row">
-        <img src="resources/images/logo_mitsubishi.svg" alt="logo_mitsubishi">
-        <img src="resources/images/logo_iwatanin.svg" alt="logo_iwatanin">
-        <img src="resources/images/logo_sekisui.svg" alt="logo_sekisui">
-        <img src="resources/images/logo_huitian.svg" alt="logo_huitian">
-      </div>
-      <div class="logo_row">
+      <!-- <div class="logo_row">
         <img src="resources/images/logo_fktape.svg" alt="logo_fktape">
         <img src="resources/images/logo_korean.svg" alt="logo_korean">
         <img src="resources/images/logo_fujin.svg" alt="logo_fujin">
-      </div>
+      </div> -->
     </div>
   </section>
 
