--- a/resources/pages/about/index.html
+++ b/resources/pages/about/index.html
@@ -38,11 +38,8 @@
               <h4 data-i18n="date_off_inc">Date off Inc</h4>
               <p class="style-elementP" data-i18n="date_off_inc_content">Incorporated in Nov 2018</p>
               <h4 data-i18n="address">Address</h4>
-              <p class="style-elementP" data-i18n="address_content">Lot 06, Road TS25, Tien Son Industrial Park, Dong
-                Nguyen Ward, Tu Son Town, Bac
-                Ninh
-                Province, Vietnam
-              </p>
+              <p class="style-elementP" data-i18n="address_content">No. 1 N10 Military Compound, Ngoc Khanh Street,
+                Giang Vo Ward, Ba Dinh District, Hanoi.</p>
               <h4 data-i18n="manpower">Manpower</h4>
               <p data-i18n="manpower_content">The number of employees exceeding 90</p>
             </div>
