feat/update-info-web-part2

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!-- Field of Operation Section -->
   <section id="field-of-operation" class="operation-section">
-    <img src="resources/images/field_of_operation.svg" alt="field_of_operation">
+    <img id="operation-image" src="resources/images/field_of_operation.svg" alt="field_of_operation">
   </section>
 
   <!-- Product Photos Section -->
