--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@
   <section id="product-photos" class="product-section">
     <h2 data-i18n="product_photos">PRODUCT PHOTOS</h2>
     <div class="product-gallery">
-      <img src="resources/images/bg_product.svg" alt="bg_product">
+      <p data-i18n="graphite_products">Graphite heat sink products</p>
+      <img src="resources/images/img_graphite_products.svg" alt="bg_product">
+
+      <p data-i18n="protection_pet">Protection pet products</p>
+      <img src="resources/images/img_protective_pet.svg" alt="bg_product">
+
+      <p data-i18n="pron_products">Pron products, waterproof</p>
+      <img src="resources/images/img_pron.svg" alt="bg_product">
+
+      <p data-i18n="cropper_products">Copper aluminum products</p>
+      <img src="resources/images/img_copper.svg" alt="bg_product">
+
+      <p data-i18n="silicone_products">Silicone heat sink products, copper heat sink pipes</p>
+      <img src="resources/images/img_sink_copper.svg" alt="bg_product">
+
+      <p data-i18n="graphite_sink_products">Graphite heat sink</p>
+      <img src="resources/images/img_graphite.svg" alt="bg_product">
+
+      <p data-i18n="computer_speaker">Computer speaker membrane</p>
+      <img src="resources/images/img_speaker.svg" alt="bg_product">
     </div>
   </section>
 
@@ -116,11 +135,12 @@
         <img src="resources/images/logo_wistron.svg" alt="logo_wistron.svg">
         <img src="resources/images/logo_foxcom.svg" alt="logo_foxcom.svg">
       </div>
-      <!-- <div class="logo_row">
-        <img src="resources/images/logo_fktape.svg" alt="logo_fktape">
-        <img src="resources/images/logo_korean.svg" alt="logo_korean">
-        <img src="resources/images/logo_fujin.svg" alt="logo_fujin">
-      </div> -->
+      <div class="logo_row">
+        <img src="resources/images/logo_mpt.svg" alt="logo_mpt">
+        <img src="resources/images/logo_haesung_vina.svg" alt="logo_haesung_vina">
+        <img src="resources/images/logo_samkawang.svg" alt="logo_samkawang">
+        <img src="resources/images/logo_noname.svg" alt="logo_noname">
+      </div>
     </div>
   </section>
 
