--- a/resources/pages/product-service/outsourcing-services/index.html
+++ b/resources/pages/product-service/outsourcing-services/index.html
@@ -45,71 +45,74 @@
             and scalable
             manufacturing solutions for your business.</p>
         </div>
-        <div class="container-img-outsourcing-services">
-          <!-- Seek Die-cutting performance -->
-          <div class="card">
-            <div>
-              <h2 data-i18n="seek_die">Seek Die-cutting performance:</h2>
-              <ul>
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="seek_die1">High speed running</li>
-                </div>
+        <div class="container-img-machine">
+          <div class="container-img-outsourcing-services">
+            <!-- Seek Die-cutting performance -->
+            <div class="card">
+              <div>
+                <h2 data-i18n="seek_die">Seek Die-cutting performance:</h2>
+                <ul>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="seek_die1">High speed running</li>
+                  </div>
 
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="seek_die2">Rapid response 24hours</li>
-                </div>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="seek_die2">Rapid response 24hours</li>
+                  </div>
 
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="seek_die3">Complex products with high accuracy</li>
-                </div>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="seek_die3">Complex products with high accuracy</li>
+                  </div>
 
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="seek_die4">High quality and can meets the accuracy of automation process</li>
-                </div>
-              </ul>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="seek_die4">High quality and can meets the accuracy of automation process</li>
+                  </div>
+                </ul>
+              </div>
+              <img src="/resources/images/img_seek_die_cutting.svg" alt="seek_die_cutting">
             </div>
-            <img src="/resources/images/img_seek_die_cutting.svg" alt="seek_die_cutting">
-          </div>
-          <div class="space-img"></div>
-          <div class="card">
-            <div>
-              <h2>Rotary Die-cutting performance:</h2>
-              <ul>
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="rotary_die1">High speed running</li>
-                </div>
+            <div class="space-img"></div>
+            <div class="card">
+              <div>
+                <h2>Rotary Die-cutting performance:</h2>
+                <ul>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="rotary_die1">High speed running</li>
+                  </div>
 
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="rotary_die2">Building the complex products</li>
-                </div>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="rotary_die2">Building the complex products</li>
+                  </div>
 
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="rotary_die3">Good quality</li>
-                </div>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="rotary_die3">Good quality</li>
+                  </div>
 
-                <div style="display: flex; flex-direction: row;">
-                  <img src="/resources/images/ic_check.svg" alt="ic_check"
-                    style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
-                  <li data-i18n="rotary_die4">For joint products with the large size and multi layers</li>
-                </div>
-              </ul>
+                  <div style="display: flex; flex-direction: row;">
+                    <img src="/resources/images/ic_check.svg" alt="ic_check"
+                      style="width: 1.25rem; height: 1.25rem; margin-right: 4px;">
+                    <li data-i18n="rotary_die4">For joint products with the large size and multi layers</li>
+                  </div>
+                </ul>
+              </div>
+              <img src="/resources/images/img_rotary_die_cutting.svg" alt="rotary_die_cutting">
             </div>
-            <img src="/resources/images/img_rotary_die_cutting.svg" alt="rotary_die_cutting">
           </div>
+          <img src="/resources/images/img_machine_parts.svg" alt="machine_parts" class="style-img-machine">
         </div>
       </section>
 
