--- a/resources/pages/product-service/optical-cutting/index.html
+++ b/resources/pages/product-service/optical-cutting/index.html
@@ -59,8 +59,27 @@
 
       <section class="container-product-photos">
         <h2 class="title-section" data-i18n="product_photos">Product photos</h2>
-        <div class="container-img">
-          <img src="/resources/images/bg_product.svg" alt="img_product_photo">
+        <div class="product-gallery">
+          <p data-i18n="graphite_products">Graphite heat sink products</p>
+          <img src="/resources/images/img_graphite_products.svg" alt="bg_product">
+
+          <p data-i18n="protection_pet">Protection pet products</p>
+          <img src="/resources/images/img_protective_pet.svg" alt="bg_product">
+
+          <p data-i18n="pron_products">Pron products, waterproof</p>
+          <img src="/resources/images/img_pron.svg" alt="bg_product">
+
+          <p data-i18n="cropper_products">Copper aluminum products</p>
+          <img src="/resources/images/img_copper.svg" alt="bg_product">
+
+          <p data-i18n="silicone_products">Silicone heat sink products, copper heat sink pipes</p>
+          <img src="/resources/images/img_sink_copper.svg" alt="bg_product">
+
+          <p data-i18n="graphite_sink_products">Graphite heat sink</p>
+          <img src="/resources/images/img_graphite.svg" alt="bg_product">
+
+          <p data-i18n="computer_speaker">Computer speaker membrane</p>
+          <img src="/resources/images/img_speaker.svg" alt="bg_product">
         </div>
       </section>
     </main>
